@@ -811,8 +811,10 @@ namespace Marvel {
 		ADD_PYTHON_FUNCTION(set_yticks)
 		ADD_PYTHON_FUNCTION(set_plot_xlimits_auto)
 		ADD_PYTHON_FUNCTION(set_plot_ylimits_auto)
+		ADD_PYTHON_FUNCTION(get_plot_xlimits)
 		ADD_PYTHON_FUNCTION(set_plot_xlimits)
 		ADD_PYTHON_FUNCTION(set_plot_ylimits)
+		ADD_PYTHON_FUNCTION(get_plot_ylimits)
 		ADD_PYTHON_FUNCTION(set_color_map)
 		ADD_PYTHON_FUNCTION(add_plot)
 		ADD_PYTHON_FUNCTION(add_shade_series)
