@@ -28,6 +28,10 @@ HOW TO UPDATE?
 
 Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.x
 
+New Commands:
+- Plot API:   Added "get_plot_xlimits" command
+- Plot API:   Added "get_plot_ylimits" command
+
 Fixes:
 - get_value:     fixed issue where bools were registered as ints
 - value_storage: fixed crashing issue with conflicting types/names
